--- a/dashboard.html
+++ b/dashboard.html
@@ -3,43 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gojo Six Eyes | Admin Dashboard</title>
+    <title>Gojo Six Eyes | Admin Control</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
-        body { background-color: #050505; color: #00d9ff; font-family: 'Segoe UI', sans-serif; margin: 0; padding: 40px; display: flex; flex-direction: column; align-items: center; }
-        .header { text-align: center; margin-bottom: 40px; }
+        body { background-color: #050505; color: #00d9ff; font-family: 'Segoe UI', sans-serif; margin: 0; padding: 20px; display: flex; flex-direction: column; align-items: center; }
+        .header { text-align: center; margin-bottom: 30px; }
         h1 { letter-spacing: 5px; text-transform: uppercase; text-shadow: 0 0 10px rgba(0, 217, 255, 0.5); }
-        .search-section { background: #0a0a0a; padding: 20px; border-radius: 8px; border: 1px solid #111; display: flex; gap: 10px; margin-bottom: 30px; }
-        input { background: #000; border: 1px solid #00d9ff; color: white; padding: 12px 20px; border-radius: 4px; outline: none; width: 300px; }
-        button { background: #00d9ff; color: black; border: none; padding: 12px 25px; border-radius: 4px; cursor: pointer; font-weight: bold; }
-        button:hover { background: #008fb3; box-shadow: 0 0 15px #00d9ff; }
-        .btn-delete { background: #ff4444; margin-top: 10px; display: none; }
+        
+        /* Stats Panel */
+        .admin-stats { display: flex; gap: 20px; margin-bottom: 20px; width: 100%; max-width: 900px; }
+        .stat-card { background: #0a0a0a; border: 1px solid #111; padding: 15px; border-radius: 8px; flex: 1; text-align: center; }
+        .stat-card h2 { margin: 0; font-size: 1.5rem; }
+        .stat-card p { margin: 5px 0 0; color: #555; font-size: 0.8rem; }
+
+        .search-section { background: #0a0a0a; padding: 20px; border-radius: 8px; border: 1px solid #111; display: flex; gap: 10px; margin-bottom: 20px; width: 100%; max-width: 900px; justify-content: center; }
+        input { background: #000; border: 1px solid #00d9ff; color: white; padding: 12px; border-radius: 4px; outline: none; width: 250px; }
+        button { background: #00d9ff; color: black; border: none; padding: 12px 20px; border-radius: 4px; cursor: pointer; font-weight: bold; }
+        
+        .controls { display: flex; gap: 10px; margin-bottom: 20px; }
+        .btn-export { background: #28a745; color: white; }
+        .btn-delete { background: #ff4444; color: white; }
+
         .results-container { width: 100%; max-width: 900px; }
-        .log-card { background: #0a0a0a; border: 1px solid #111; padding: 20px; border-radius: 8px; margin-bottom: 15px; display: grid; grid-template-columns: 1fr 1fr; gap: 10px; transition: 0.3s; }
-        .log-card:hover { border-color: #00d9ff; }
-        .label { color: #555; font-size: 0.75rem; text-transform: uppercase; }
-        .value { color: #fff; font-size: 0.95rem; }
-        .timestamp { grid-column: span 2; text-align: right; color: #00d9ff; font-size: 0.7rem; margin-top: 5px; }
+        .log-card { background: #0a0a0a; border: 1px solid #111; padding: 15px; border-radius: 8px; margin-bottom: 10px; display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; font-size: 0.85rem; }
+        .label { color: #555; font-size: 0.7rem; text-transform: uppercase; }
+        .timestamp { color: #00d9ff; font-size: 0.7rem; text-align: right; grid-column: span 3; }
     </style>
 </head>
 <body>
 
     <div class="header">
-        <h1>🌀 SIX EYES DASHBOARD</h1>
-        <p style="color: #444;">Infinity Void - Telemetry Viewer</p>
+        <h1>🌀 ADMIN CONTROL CENTER</h1>
+    </div>
+
+    <div class="admin-stats">
+        <div class="stat-card">
+            <h2 id="total-logs">0</h2>
+            <p>TOTAL TELEMETRY</p>
+        </div>
+        <div class="stat-card">
+            <h2 id="last-ip">---</h2>
+            <p>LAST CAPTURED IP</p>
+        </div>
     </div>
 
     <div class="search-section">
-        <input type="text" id="op-input" placeholder="Enter Operation ID">
-        <button onclick="searchLogs()">DECODE DATA</button>
+        <input type="text" id="op-input" placeholder="Search ID (Case Sensitive)">
+        <button onclick="searchLogs()">DECODE</button>
     </div>
 
-    <div id="action-area" style="margin-bottom: 20px;">
-        <button class="btn-delete" id="delete-btn" onclick="clearLogs()">PURGE ALL LOGS FOR THIS ID</button>
+    <div class="controls">
+        <button class="btn-export" onclick="exportToCSV()">💾 EXCEL (CSV)</button>
+        <button class="btn-delete" onclick="clearLogs()">🔥 PURGE ID</button>
     </div>
 
     <div class="results-container" id="results-area">
-        <p style="text-align:center; color:#444;">Enter an ID to fetch encrypted telemetry data...</p>
+        <p style="text-align:center; color:#444;">Standby for data input...</p>
     </div>
 
     <script>
@@ -47,54 +66,79 @@
         const SUPABASE_KEY = 'sb_publishable_THarexbaf5WB2Cc-c6t-sg_TQJycbtz';
         const _supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
+        let currentData = [];
+
+        // Sahifa yuklanganda umumiy statistika va oxirgi loglarni chiqarish
+        async function fetchStats() {
+            const { data, count } = await _supabase
+                .from('telemetry')
+                .select('*', { count: 'exact' })
+                .order('created_at', { ascending: false })
+                .limit(5);
+
+            if (data) {
+                document.getElementById('total-logs').innerText = count;
+                document.getElementById('last-ip').innerText = data[0]?.ip || "None";
+                renderLogs(data, "LATEST LIVE LOGS");
+                currentData = data;
+            }
+        }
+
         async function searchLogs() {
             const opID = document.getElementById('op-input').value.trim();
-            const resultsArea = document.getElementById('results-area');
-            const deleteBtn = document.getElementById('delete-btn');
+            if (!opID) return alert("Enter ID!");
 
-            if (!opID) return alert("Please enter an Operation ID!");
+            const { data, error } = await _supabase
+                .from('telemetry')
+                .select('*')
+                .eq('operation_id', opID) // Case sensitive qidiruv
+                .order('created_at', { ascending: false });
 
-            resultsArea.innerHTML = `<p style="text-align:center; color:#00d9ff;">Searching database for "${opID.toUpperCase()}"...</p>`;
-            deleteBtn.style.display = 'none';
-
-            try {
-                const { data, error } = await _supabase
-                    .from('telemetry')
-                    .select('*')
-                    .eq('operation_id', opID) // Bazadagi kabi qidiradi
-                    .order('created_at', { ascending: false });
-
-                if (error) throw error;
-
-                if (data.length === 0) {
-                    resultsArea.innerHTML = `<p style="text-align:center; color:#ff4444;">No telemetry found for ID: ${opID}</p>`;
-                    return;
-                }
-
-                deleteBtn.style.display = 'inline-block';
-                resultsArea.innerHTML = `<div style="margin-bottom:20px;">TOTAL RECORDS: ${data.length}</div>`;
-
-                data.forEach(log => {
-                    resultsArea.innerHTML += `
-                        <div class="log-card">
-                            <div><div class="label">IP Address</div><div class="value">${log.ip}</div></div>
-                            <div><div class="label">Location</div><div class="value">${log.location}</div></div>
-                            <div><div class="label">Provider</div><div class="value">${log.provider}</div></div>
-                            <div><div class="label">User Agent</div><div class="value" style="font-size:0.7rem;">${log.user_agent.substring(0, 50)}...</div></div>
-                            <div class="timestamp">Captured at: ${new Date(log.created_at).toLocaleString()}</div>
-                        </div>`;
-                });
-            } catch (err) {
-                resultsArea.innerHTML = `<p style="color:red; text-align:center;">Error accessing database.</p>`;
+            if (data) {
+                currentData = data;
+                renderLogs(data, `RESULTS FOR: ${opID}`);
             }
+        }
+
+        function renderLogs(logs, title) {
+            const area = document.getElementById('results-area');
+            area.innerHTML = `<h3 style="margin-bottom:15px; font-size:0.9rem;">${title}</h3>`;
+            logs.forEach(log => {
+                area.innerHTML += `
+                    <div class="log-card">
+                        <div><div class="label">ID</div><div>${log.operation_id}</div></div>
+                        <div><div class="label">IP</div><div>${log.ip}</div></div>
+                        <div><div class="label">Location</div><div>${log.location}</div></div>
+                        <div class="timestamp">${new Date(log.created_at).toLocaleString()}</div>
+                    </div>`;
+            });
+        }
+
+        function exportToCSV() {
+            if (currentData.length === 0) return alert("No data to export!");
+            let csv = "ID,IP,Location,Time\n";
+            currentData.forEach(row => {
+                csv += `${row.operation_id},${row.ip},${row.location},${row.created_at}\n`;
+            });
+            const blob = new Blob([csv], { type: 'text/csv' });
+            const url = window.URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.setAttribute('hidden', '');
+            a.setAttribute('href', url);
+            a.setAttribute('download', 'six_eyes_logs.csv');
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
         }
 
         async function clearLogs() {
             const opID = document.getElementById('op-input').value.trim();
-            if (!confirm(`Permanently delete all logs for ${opID}?`)) return;
-            const { error } = await _supabase.from('telemetry').delete().eq('operation_id', opID);
-            if (!error) { alert("Purged!"); searchLogs(); }
+            if (!opID || !confirm(`Delete all logs for ${opID}?`)) return;
+            await _supabase.from('telemetry').delete().eq('operation_id', opID);
+            fetchStats();
         }
+
+        window.onload = fetchStats;
     </script>
 </body>
 </html>
